--- a/video2.html
+++ b/video2.html
@@ -7,7 +7,7 @@
     <title>HTML 5 Boilerplate</title>
   </head>
   <body>
-    <video controls  width="100%">
+    <video autoplay loop muted  width="100%">
 
        <source src="/https://kasrauber.github.io/loop.mp4"
             type="video/mp4">
