--- a/video2.html
+++ b/video2.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <video autoplay loop muted  width="100%">
-
-       <source src="/https://kasrauber.github.io/loop.mp4"
+       <source src="https://kasrauber.github.io/loop.mp4"
             type="video/mp4">
-
-    Sorry, your browser doesn't support embedded videos.
+       Sorry, your browser doesn't support embedded videos.
     </video>
 
   </body>
