Changed gif with mp4

--- a/video.html
+++ b/video.html
@@ -7,6 +7,11 @@
     <title>Food</title>
   </head>
   <body>
-	 <img src="https://kasrauber.github.io/pizza.gif" width="100%"/>
+    <video autoplay loop muted  width="100%">
+       <source src="https://kasrauber.github.io/loop.mp4"
+            type="video/mp4">
+       Sorry, your browser doesn't support embedded videos.
+    </video>
+
   </body>
 </html>
