--- a/video2.html
+++ b/video2.html
@@ -7,11 +7,6 @@
     <title>Food</title>
   </head>
   <body>
-    <video autoplay loop muted  width="100%">
-       <source src="https://kasrauber.github.io/loop.mp4"
-            type="video/mp4">
-       Sorry, your browser doesn't support embedded videos.
-    </video>
-
+	 <img src="https://kasrauber.github.io/pizza.gif" width="100%"/>
   </body>
 </html>
