--- a/video2.html
+++ b/video2.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Food</title>
+    <style>
+
+      body {
+          margin: 0px
+      }
+  </style>
   </head>
   <body>
 	 <img src="https://kasrauber.github.io/pizza.gif" width="100%"/>
